--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spring": "^9.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "2.2.0",
     "node-sass": "8.0.0",
+    "prettier": "2.8.1",
     "sass": "1.56.2",
-    "vite": "3.2.3",
-    "prettier": "2.8.1"
+    "vite": "3.2.3"
   }
 }
