--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "9.6.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-spring": "^9.6.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "2.2.0",
