--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/parallax": "9.6.1",
+    "gsap": "3.11.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
