--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,10 +28,12 @@ jobs:
           node-version: 16
       - name: Install dependencies
         run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - name: Build
         run: npm run build
+      - uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
 
   deploy:
     needs: [build]
@@ -46,8 +48,10 @@ jobs:
         with:
           cache: 'npm'
           node-version: 16
-      - name: Install dependencies
-        run: npm ci
+      - uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
