--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "gsap": "3.11.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scroll": "^1.8.9"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "2.2.0",
